# TheLearningExperience

./: 100. tic tac toe game.py  BattleShips+.py  example.env  pyproject.toml  pyproject.toml~  readme.md  render.yaml  requirements.txt  requirements.txt~  shell команды.docx  tic_tac_toe.py
DjangoProject/project/: db.sqlite3
DjangoProject/project/project/: settings.py  wsgi.py
NewsPaper/: db.sqlite3  shell команды.txt
NewsPaper (continuation)/: db.sqlite3  shell команды.docx
NewsPaper (continuation)/NewsPaper/: settings.py  urls.py
NewsPaper (continuation)/news/: admin.py  models.py  views.py
NewsPaper (continuation)/news/migrations/: 0001_initial.py
NewsPaper (continuation)/news/templatetags/: custom_filters.py  custom_tags.py
NewsPaper (continuation)/templates/: news.html  one_news.html
NewsPaper (continuation)/templates/flatpages/: default.html
NewsPaper/NewsPaper/: settings.py
NewsPaper/news/: models.py
NewsPaper/news/migrations/: 0001_initial.py
Pereval_DRF/Pereval_DRF/: settings.py  urls.py
Pereval_DRF/app_main/: models.py  serializers.py  tests.py  tests.py~  urls.py
Pereval_DRF/app_main/migrations/: 0001_initial.py
TGBot/: app.py  extensions.py  settings.py
TGbot_recipes/: bot_main.py  recipes_handler.py  token_data.py
TelegramBot/: app.py  cfg.py  utils.py
_messageboard/messageboard/: db.sqlite3
_messageboard/messageboard/board_posts/: admin.py  forms.py  tasks.py  views.py
_messageboard/messageboard/messageboard/: settings.py
_messageboard/messageboard/sign/: views.py
(+2 files in other folders)
