[project]
name = "pereval_drf"
version = "0.0.1"
description = "Задание"
authors = [
    {name = "Not Needed", email = "notneeded@example.com"}
]
license = {text = "no"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = {}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
